mise en place html home page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,92 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;500&amp;display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e91c07ac0e.js" crossorigin="anonymous"></script>
+    <title>4EVENT</title>
   </head>
   <body>
-    <h1>Hello world nn</h1>
+    <header>
+      <h1>4 EVENT</h1>
+      <nav>
+        <a href="">Acceuil</a>
+        <a href="">Nos Prestations</a>
+        <a href="">Location</a>
+        <a href="">Contact</a>
+      </nav> 
+    </header>
+      <main>
+        <div class="part">
+          <p class="presentation">Votre partenaire pour vos évenement</p>
+          <a href=""><button type="button" class="btnPlus">En savoir plus</button></a>
+          <figure> 
+            <img src="images/image 1.png" alt="Salle de réception">
+          </figure> 
+        <img src="images/Rectangle 16.png" alt="barre noir">
+        </div>
+        <section id="presta">
+          <h2>Nos Prestations</h2>
+          <div class="prestations">
+            <div class="card">
+              <a href="">
+              <figure>
+                <img src="images/Rectangle 3.png" alt="Salle de mariage">
+                <figcaption>Mariage</figcaption>
+              </figure>
+              </a>
+            </div>
+            <div class="card">
+              <a href="">
+            <figure>
+              <img src="images/image 2.png" alt="Salle de séminaire">
+              <figcaption>Séminaire</figcaption>
+            </figure>
+          </a>
+          </div>
+          <div class="card">
+            <a href="">
+            <figure>
+              <img src="images/image 3.png" alt="Esport">
+              <figcaption>Esport</figcaption>
+            </figure>
+          </a>
+          </div>
+          <div class="card">
+            <a href="">
+            <figure>
+              <img src="images/image 4.png" alt="Fête privé">
+              <figcaption>Fête privée</figcaption>
+            </figure>
+          </a>
+          </div>
+          </div>
+          <img src="images/Rectangle 16.png" alt="barre noir">
+        </section>
+        <section id="avis">
+          <h2>Avis de nos clients</h2>
+          <div class="avisC">
+          <a href="">
+          <img src="images\Ellipse 1.png" alt="">
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </a>
+      </div>
+      <img src="images/Rectangle 16.png" alt="barre noir">
+        </section>
+      </main>
+      <footer>
+        <nav>
+          <a href="">Acceuil</a>
+          <a href="">Nos Prestations</a>
+          <a href="">Location</a>
+          <a href="">Contact</a>
+        </nav> 
+        <a href=""><i class="fab fa-facebook-f"></i></a>
+        <a href=""><i class="fab fa-instagram"></i></a>
+        <p>© Tous droits réservés - 2020</p>
+
+      </footer>
+    
   </body>
 </html>
