mise a page css fini a 95%

--- a/index.html
+++ b/index.html
@@ -13,70 +13,74 @@
   <body>
     <header>
       <h1>4 EVENT</h1>
-      <nav>
-        <a href="">Acceuil</a>
-        <a href="">Nos Prestations</a>
-        <a href="">Location</a>
-        <a href="">Contact</a>
+      <nav id="navH">
+        <a class="navH" href="">Acceuil</a>
+        <a class="navH" href="">Nos Prestations</a>
+        <a class="navH" href="">Location</a>
+        <a class="navH" href="">Contact</a>
       </nav> 
     </header>
       <main>
-        <div class="part">
-          <p class="presentation">Votre partenaire pour vos évenement</p>
+        <section id="part">
+          <div class="partenaire">
+          <h2 class="presentation">Votre partenaire pour vos évenement</h2>
           <a href=""><button type="button" class="btnPlus">En savoir plus</button></a>
+          </div>
+          <div class="img">
           <figure> 
-            <img src="images/image 1.png" alt="Salle de réception">
-          </figure> 
-        <img src="images/Rectangle 16.png" alt="barre noir">
-        </div>
+            <img class="img1" src="images/image 1.png" alt="Salle de réception">
+          </figure>
+         </div>
+        </section>  
+        <hr class="separateur" />
         <section id="presta">
           <h2>Nos Prestations</h2>
           <div class="prestations">
             <div class="card">
               <a href="">
-              <figure>
-                <img src="images/Rectangle 3.png" alt="Salle de mariage">
-                <figcaption>Mariage</figcaption>
+              <figure class="section1">
+                <img class="cardI" src="images/Rectangle 3.png" alt="Salle de mariage">
               </figure>
               </a>
+              <button class="btnP" type="button">Mariage</button>
             </div>
             <div class="card">
               <a href="">
-            <figure>
-              <img src="images/image 2.png" alt="Salle de séminaire">
-              <figcaption>Séminaire</figcaption>
-            </figure>
+            <figure class="section1">
+              <img class="cardI" src="images/image 2.png" alt="Salle de séminaire">
+            </figure class="section1">
           </a>
+          <button class="btnP" type="button">Séminaire</button>
           </div>
           <div class="card">
             <a href="">
-            <figure>
-              <img src="images/image 3.png" alt="Esport">
-              <figcaption>Esport</figcaption>
+            <figure class="section1">
+              <img class="cardI" src="images/image 3.png" alt="Esport">
             </figure>
           </a>
+          <button class="btnP" type="button">Esport</button>
           </div>
           <div class="card">
             <a href="">
-            <figure>
-              <img src="images/image 4.png" alt="Fête privé">
-              <figcaption>Fête privée</figcaption>
+            <figure class="section1">
+              <img class="cardI" src="images/image 4.png" alt="Fête privé">
             </figure>
           </a>
+          <button class="btnP" type="button">Fête privée</button>
           </div>
           </div>
-          <img src="images/Rectangle 16.png" alt="barre noir">
         </section>
+        <hr class="separateur" />
         <section id="avis">
           <h2>Avis de nos clients</h2>
           <div class="avisC">
-          <a href="">
+          <a href="" class="avisC">
           <img src="images\Ellipse 1.png" alt="">
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          <p class="avisP">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </a>
       </div>
-      <img src="images/Rectangle 16.png" alt="barre noir">
         </section>
+        <hr class="separateur" />
       </main>
       <footer>
         <nav>
