--- a/index.html
+++ b/index.html
@@ -83,16 +83,17 @@
         <hr class="separateur" />
       </main>
       <footer>
-        <nav>
+        <nav class="navFooter">
           <a href="">Acceuil</a>
           <a href="">Nos Prestations</a>
           <a href="">Location</a>
           <a href="">Contact</a>
         </nav> 
+        <div class="logo">
         <a href=""><i class="fab fa-facebook-f"></i></a>
         <a href=""><i class="fab fa-instagram"></i></a>
+        </div>
         <p>© Tous droits réservés - 2020</p>
-
       </footer>
     
   </body>
