page de prestation completement fini

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header>
       <h1>4 EVENT</h1>
       <nav id="navH">
-        <a class="navH" href="">Acceuil</a>
-        <a class="navH" href="">Nos Prestations</a>
+        <a class="navH" href="index.html">Acceuil</a>
+        <a class="navH" href="prestations.html">Nos Prestations</a>
         <a class="navH" href="">Location</a>
         <a class="navH" href="">Contact</a>
       </nav> 
@@ -85,7 +85,7 @@
       <footer>
         <nav class="navFooter">
           <a href="">Acceuil</a>
-          <a href="">Nos Prestations</a>
+          <a href="prestations.html">Nos Prestations</a>
           <a href="">Location</a>
           <a href="">Contact</a>
         </nav> 
